@@ -72,6 +72,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/plot3DProfiles.py',
                       'progs/plotCFstats.py',
                       'progs/extractProfile.py',
+                      'progs/extractProfileTS.py',
                       'progs/extract3DProfile.py',
                       'progs/plotRSL.py',
                       'progs/plotRSLloc.py',
